2011-04-17  Per Bothner  <per@bothner.com>

	* LispLanguage.java (defaultReadTable): Make protected.
	Don't initialize here, but do it lazily.
	* ReadTable.java (getCurrent): In needed, initialize defaultReadTable.
	* LispReader.java (validPostfixLookupStart): Don't hardwire ':'.

2011-03-01  Per Bothner  <per@bothner.com>

	* LangObjType.java (makePathProc, makeFilepathProc, makeURIProc):
	Remove static fields, to avoid needs reflection during startup.
	(getConstructor): Instead create PrimProcedure objects on-the-fly.

2011-02-24  Per Bothner  <per@bothner.com>

	* LangObjType.java (s8vectorType, u8vectorType, s16vectorType,
	u16vectorType, s32vectorType, u32vectorType, s64vectorType,
	u32vectorType, f32vectorType, f64vectorType): New LangObjType statics.

2011-01-19  Per Bothner  <per@bothner.com>

	* LispLanguage.java (makeBody): Remove method - now in Translator.
	(defSntxStFld): mangleNameIfNeeded is now in super-class.
	* LangPrimType.java: emitPushBoolean and emitCoerceToBoolean are
	now in Compilation, not Language.

2011-01-17  Per Bothner  <per@bothner.com>

	* LispLanguage.java (getCompilationClass): New method.
	(getCompilation, makeApply, checkDefaultBinding): Removed methods.

2011-01-03  Per Bothner  <per@bothner.com>

	Support square brackets for constructing immutable vectors.
	* BracketApply.java: New Syntax.  Currently handles 'type[]'.
	* Makefile.am: Update accordingly.
	* LangObjType.java (CONST_VECTOR_TYPE_CODE): New constant.
	(constVectorType): New static LangObjectType field.
	* ReadTable.java (defaultBracketMode): No default -2, which
	treats [x y z] as an immutable-sequence constructor.
	(setBracketMode): Handle new mode==-2
	* LispReader.java (handlePostfix): Handle 'exp[exps]'.

	* ReaderVector.java (readVector):  Return ConstVector rather than
	FVector, to produce immutable result.

	* ReaderTypespec.java (read): Update belatedly to use
	ReadTable#makeSymbol.

2010-12-27  Per Bothner  <per@bothner.com>
